Corrigiendo coverage en sonar